Add User and Role Management functionality
- Implemented UserManagementController for managing users, including creating, editing, deleting, and assigning roles.
- Added views for user creation, editing, and management, along with role management functionalities.
- Introduced RoleViewModel and UserManagementViewModel for better data handling in views.
- Enhanced DashboardController to display user and role statistics on the dashboard.
- Updated the dashboard view to reflect new user and role statistics.
- Created a layout for user management views to maintain consistent styling.

--- a/EMS/Views/Shared/_DashboardLayout.cshtml
+++ b/EMS/Views/Shared/_DashboardLayout.cshtml
@@ -88,6 +88,50 @@
                             <span class="pcoded-mtext">Profile</span>
                         </a>
                     </li>
+
+                    <li class="nav-item pcoded-menu-caption">
+                        <label>User Management</label>
+                    </li>
+                    <li class="nav-item pcoded-hasmenu">
+                        <a href="#!" class="nav-link">
+                            <span class="pcoded-micon"><i class="feather icon-users"></i></span>
+                            <span class="pcoded-mtext">User Management</span>
+                        </a>
+                        <ul class="pcoded-submenu">
+                            <li>
+                                <a asp-action="Index" asp-controller="UserManagement" class="nav-link">
+                                    <span class="pcoded-micon"><i class="feather icon-user"></i></span>
+                                    <span class="pcoded-mtext">All Users</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-action="CreateUser" asp-controller="UserManagement" class="nav-link">
+                                    <span class="pcoded-micon"><i class="feather icon-user-plus"></i></span>
+                                    <span class="pcoded-mtext">Create User</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item pcoded-hasmenu">
+                        <a href="#!" class="nav-link">
+                            <span class="pcoded-micon"><i class="feather icon-shield"></i></span>
+                            <span class="pcoded-mtext">Role Management</span>
+                        </a>
+                        <ul class="pcoded-submenu">
+                            <li>
+                                <a asp-action="Roles" asp-controller="UserManagement" class="nav-link">
+                                    <span class="pcoded-micon"><i class="feather icon-shield"></i></span>
+                                    <span class="pcoded-mtext">All Roles</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-action="CreateRole" asp-controller="UserManagement" class="nav-link">
+                                    <span class="pcoded-micon"><i class="feather icon-plus"></i></span>
+                                    <span class="pcoded-mtext">Create Role</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -256,13 +300,13 @@
 
 
 
-                           
-                                       
-                                   
-                                   
-                                       
-                                           
-                                                       
-                                   
-                                   
-                                       
+
+
+
+
+
+
+
+
+
+
