--- a/EMS/Views/Dashboard/Index.cshtml
+++ b/EMS/Views/Dashboard/Index.cshtml
@@ -9,13 +9,13 @@
         <div class="card-body">
             <div class="card-header-left mb-3">
                 <h5 class="mb-0">Total Users</h5>
-                <p class="p-t-10 m-b-0 text-c-yellow">Active system users</p>
+                <p class="p-t-10 m-b-0 text-c-yellow">Registered system users</p>
             </div>
             <i class="feather icon-users st-icon bg-c-yellow"></i>
             <div class="text-left">
-                <h3 class="d-inline-block">1,234</h3>
+                <h3 class="d-inline-block">@ViewBag.TotalUsers</h3>
                 <i class="feather icon-arrow-up f-30 text-c-green"></i>
-                <span class="float-right bg-c-yellow">12%</span>
+                <span class="float-right bg-c-yellow">@ViewBag.ActiveUsers Active</span>
             </div>
         </div>
     </div>
@@ -24,12 +24,12 @@
     <div class="card widget-statstic-card card-border-c-red">
         <div class="card-body">
             <div class="card-header-left mb-3">
-                <h5 class="mb-0">System Alerts</h5>
-                <p class="p-t-10 m-b-0 text-c-red">Active alerts today</p>
+                <h5 class="mb-0">Inactive Users</h5>
+                <p class="p-t-10 m-b-0 text-c-red">Disabled user accounts</p>
             </div>
-            <i class="feather icon-alert-triangle st-icon bg-c-red txt-lite-color"></i>
+            <i class="feather icon-user-x st-icon bg-c-red txt-lite-color"></i>
             <div class="text-left">
-                <h3 class="d-inline-block">23</h3>
+                <h3 class="d-inline-block">@ViewBag.InactiveUsers</h3>
                 <i class="feather icon-arrow-down text-c-red f-30"></i>
             </div>
         </div>
@@ -39,12 +39,12 @@
     <div class="card widget-statstic-card card-border-c-blue">
         <div class="card-body">
             <div class="card-header-left mb-3">
-                <h5 class="mb-0">Active Sessions</h5>
-                <p class="p-t-10 m-b-0 text-c-blue">Current active sessions</p>
+                <h5 class="mb-0">Total Roles</h5>
+                <p class="p-t-10 m-b-0 text-c-blue">System roles configured</p>
             </div>
-            <i class="feather icon-activity st-icon bg-c-blue"></i>
+            <i class="feather icon-shield st-icon bg-c-blue"></i>
             <div class="text-left">
-                <h3 class="d-inline-block">847</h3>
+                <h3 class="d-inline-block">@ViewBag.TotalRoles</h3>
                 <i class="feather icon-arrow-up text-c-green f-30"></i>
             </div>
         </div>
@@ -106,11 +106,19 @@
         </div>
         <div class="card-body">
             <div class="list-group">
-                <a href="#!" class="list-group-item list-group-item-action">
+                <a asp-action="CreateUser" asp-controller="UserManagement"
+                    class="list-group-item list-group-item-action">
                     <i class="feather icon-user-plus"></i> Add New User
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action">
-                    <i class="feather icon-settings"></i> System Settings
+                <a asp-action="CreateRole" asp-controller="UserManagement"
+                    class="list-group-item list-group-item-action">
+                    <i class="feather icon-shield"></i> Create New Role
+                </a>
+                <a asp-action="Index" asp-controller="UserManagement" class="list-group-item list-group-item-action">
+                    <i class="feather icon-users"></i> Manage Users
+                </a>
+                <a asp-action="Roles" asp-controller="UserManagement" class="list-group-item list-group-item-action">
+                    <i class="feather icon-settings"></i> Manage Roles
                 </a>
                 <a href="#!" class="list-group-item list-group-item-action">
                     <i class="feather icon-file-text"></i> Generate Report
@@ -133,4 +141,3 @@
         });
     </script>
 }
- 
